src/objects/KaybusConfig__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Contains Client Id and Secret</description>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelationshipName__c</fullName>
        <label>RelationshipName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Kaybus Config</label>
</CustomObject>